--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,6 @@
   },
   "homepage": "https://github.com/siwar234/Project-management-app#readme",
   "dependencies": {
-    "@google/generative-ai": "^0.16.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -47,9 +46,6 @@
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "jest": "^29.7.0",
-    "mongodb-memory-server": "^10.0.0",
-    "supertest": "^7.0.0"
+    "cross-env": "^7.0.3"
   }
 }
